sumo/tests/sumo/errors/routes/emptyroute_newstyle_plainemission/errors.sumo
Error: Vehicle's '0' route has no edges.
Quitting (on error).
